--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 }
 /* sec-video */
 .sec-video {
-  margin: 20rem 10rem;
+  margin: 20rem 4rem;
 }
 .flex-box {
   display: flex;
@@ -70,10 +70,11 @@ body {
 .flex-item {
   width: 50%;
 
-  padding: 0 8rem;
+  padding: 0 2rem;
 }
 .flex-item > *:not(:last-child) {
   margin-bottom: 2rem;
+  margin-right: 4rem;
 }
 .color-black {
   color: black;
