--- a/style.css
+++ b/style.css
@@ -53,6 +53,15 @@ body {
   display: inline-block;
   text-decoration: none;
   font-size: 30px;
+  transition: all 0.4s;
+}
+.btn:hover {
+  transform: translateY(-7px);
+  box-shadow: 1rem 1rem 4rem black;
+}
+.btn:active {
+  transform: translateY(-2px);
+  box-shadow: 0.5rem 0.5rem 2rem black;
 }
 /* sec-video */
 .sec-video {
@@ -221,6 +230,9 @@ body {
   font-weight: 700;
   margin: 2rem auto;
   display: inline-block;
+}
+.donate-link:hover {
+  color: #7fff00;
 }
 footer {
   width: 100%;
