--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
   font-family: "Inter", sans-serif;
   max-width: 100%;
 }
+
+:root {
+  --f-s-header-main: 55px;
+  --f-s-paragraph: 18px;
+  --f-s-header-secon: 45px;
+}
 .sec-header {
   width: 100%;
   height: 87vh;
@@ -28,7 +34,7 @@ body {
   transform: translate(-50%, -50%);
 }
 .heading-primary {
-  font-size: 90px;
+  font-size: var(--f-s-header-main);
   color: white;
   font-weight: 700;
   line-height: 7rem;
@@ -41,7 +47,7 @@ body {
 }
 .paragraph {
   color: #ffffff;
-  font-size: 30px;
+  font-size: var(--f-s-paragraph);
   line-height: 2.6rem;
 }
 .btn {
@@ -52,7 +58,7 @@ body {
   border-radius: 6px;
   display: inline-block;
   text-decoration: none;
-  font-size: 30px;
+  font-size: var(--f-s-paragraph);
   transition: all 0.4s;
 }
 .btn:hover {
@@ -87,7 +93,7 @@ body {
 }
 .color-black {
   color: black;
-  font-size: 70px;
+  font-size: var(--f-s-header-secon);
   line-height: 5.5rem;
 }
 .color-grey {
@@ -135,7 +141,7 @@ body {
   padding: 0 5rem;
 }
 .small {
-  font-size: 35px;
+  font-size: var(--f-s-header-secon);
 }
 .icon {
   color: #ef233c;
@@ -243,11 +249,11 @@ footer {
 .heading-tertiary {
   font-family: "Lobster", cursive;
   font-weight: 700;
-  font-size: 60px;
+  font-size: var(--f-s-header-secon);
   color: #ef233c;
   margin-bottom: 3rem;
 }
 footer p {
   color: white;
-  font-size: 20px;
+  font-size: var(--f-s-paragraph);
 }
