--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   position: relative;
 }
 .header-content {
-  width: 750px;
+  width: 30%;
   position: absolute;
   top: 50%;
   left: 32%;
@@ -72,7 +72,7 @@ body {
 }
 /* sec-video */
 .sec-video {
-  margin: 20rem 4rem;
+  margin: 20rem 12rem;
 }
 .flex-box {
   display: flex;
@@ -95,7 +95,7 @@ body {
 .color-black {
   color: black;
   font-size: var(--f-s-header-secon);
-  line-height: 5.5rem;
+  line-height: 160%;
 }
 .color-grey {
   color: #707070;
@@ -103,7 +103,7 @@ body {
 .video {
   margin: 0 auto;
   display: block;
-  width: 50rem;
+  width: 100%;
   height: 54rem;
   object-fit: initial;
   border-radius: 9px;
@@ -123,7 +123,7 @@ body {
   background-color: transparent;
 }
 .sec-video-img {
-  width: 80%;
+  width: 100%;
   height: 54rem;
   border-radius: 10px;
 }
@@ -133,7 +133,7 @@ body {
 }
 .sec-help-header {
   text-align: center;
-  width: 60rem;
+  width: 40%;
   margin: 5rem auto;
 }
 .sec-help-header h1 {
